# colvars

./: .gitattributes  .gitignore  CITATION.cff  README-c++11.md  README-totalforce.md  README-versions.md  README.md  colvarcomp_torchann.cpp  update-colvars-code.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: backend-template.yml  build-backends.yml  build-sunpro.yml  check-cherry-pick.yml  codeql-analysis.yml  coverity.yml  (+4 more)
C_fortran/: Makefile  colvarproxy_C.cpp  colvarproxy_C.h  colvars.py
cmake/: CMakeLists.txt  buildColvarsLepton.cmake  buildColvarsTests.cmake
colvartools/: CMakeLists.txt  Makefile  README.md  abf_data.cpp  abf_data.h  abf_integrate.cpp  abmd.tcl  abmd_minimal.tcl  colvar_display.tcl  colvar_traj.tcl  colvars_grid.py  extract_weights_biases.py  gen_multimap.py  mwABF_selection.tcl  noe_to_colvars.py  pathCV.tcl  plot_colvars_traj.py  poisson_integrator.cpp  poisson_integrator_conv.cpp  quaternion2rmatrix.tcl  test_scripted_gradients.tcl  write_index_group.tcl
colvartools/namd/: README.md  bemtd.namd  colvars_replica_utils.tcl  load_trajectories.py
colvartools/namd/Common/: ammonia_water.psf  common.namd  par_all36_ammonia_water.prm
colvartools/namd/bemtd/: README.md  ammonia_water-bemtd.colvars.in  bemtd.namd  run.sh
colvartools/namd/eq/: ammonia_water-eq.colvars.in  eq.namd  run.sh
devel-tools/: Makefile  README  README.md  build_test_library.cmake  check_build_recipes  check_build_recipes.sh  check_header  cleanup-gh-cache.sh  compare_branch_commits.sh  compile-gromacs.sh  compile-lammps.sh  compile-namd.sh  compile-vmd.sh  create_gromacs-colvars-releases.md  fix_unmerged_ours  fix_unmerged_theirs  generate-makefile.sh  generate-namd-makefile.sh  generate-vmd-makefile.sh  get_container  get_spiff  load-openmpi.sh  load-recent-gcc.sh  load-recent-git.sh  patch_ref_files  pre-commit  print_pr_list.py  remove_spiff_format  run_clang_tidy.sh  set-ccache.sh  update-header-cpp.patch  update-header-tex.patch  version_functions.sh
doc/: .gitignore  Makefile  README.md  colvars-code-refs.bib  colvars-cv.tex  colvars-engine-flags.tex  colvars-refman-css.tex  colvars-refman-gromacs.tex  colvars-refman-lammps.tex  colvars-refman-main.tex  colvars-refman-namd.tex  colvars-refman-tinkerhp.tex  colvars-refman-vmd.tex  colvars-refman.bib  colvars-refman.tex  colvars.bib  colvars_diagram.eps  colvars_diagram.odg  colvars_timestep_flowchart.ods  cv_version.tex  cvscript-fix-modify.tex  cvscript-tcl.tex  extract_code_refs.py  gen_cvscript_doc.tcl  html5mjlatex.cfg  postprocess_html.sh  print_engine_versions.sh  ref_Fiorin_2013.bib  ref_Fiorin_2013.ciw  remove_htmltags.py  try  ug_colvars.tex  update_manuals.sh  update_website.sh
examples/: 01_NOE_restraints.colvars.in  02_aggregation.colvars.in  03_orientation.colvars.in  04_geometric_restraints.colvars.in  05_targeted_MD.colvars.in  07_permeation.colvars.in  08_relative_rotation.colvars.in  10_pathCV.namd  11_polar_angles.in  12_DBC_restraint.in  3_orientation.colvars.in  4_geometric_restraints.colvars.in  5_targeted_MD.colvars.in  6_ti_gaussian.colvars.in  8_relative_rotation.colvars.in  9_dipole_variance.colvars.in  README.md
gromacs/: CMakeLists.txt.Lepton.diff  CMakeLists.txt.diff  gmxManageColvars.cmake.patch  gromacs-2018.3.patch  gromacs-2020.X.patch  gromacs-2020.x.patch  gromacs-2021.x-github.patch  gromacs-2021.x.patch  gromacs-2022.x.patch  gromacs-2023.x.patch  gromacs-insert.awk  gromacs-mdmodules.patch  update_patches_from_git.sh
lammps/: COLVARS.cmake  COLVARS.cmake.diff
namd/: Make.depends  Make.depends.patch  Makefile  Makefile.patch  config  config.patch
namd_cudaglobalmaster/: CMakeLists.txt  README.md  colvarproxy_cudaglobalmaster.C  colvarproxy_cudaglobalmaster.h  colvarproxy_cudaglobalmaster_kernel.h
namd_cudaglobalmaster/example/: opes.colvars
namd_cudaglobalmaster/example/input_wb29/: alad-wb29.psf  alad-wb_mineq29.xsc
python/: colvars.py
src/: .clang-format  Doxyfile  Makefile  colvar.cpp  colvar.h  colvar_UIestimator.h  colvar_arithmeticpath.h  colvar_customfunction.cpp  colvar_customfunction.h  colvar_geometricpath.h  colvar_gpu_calc.cpp  colvar_gpu_calc.h  colvar_gpu_support.cpp  colvar_gpu_support.h  colvar_neuralnetworkcompute.cpp  colvar_neuralnetworkcompute.h  colvar_rotation_derivative.cpp  colvar_rotation_derivative.h  colvaratoms.cpp  colvaratoms.h  colvaratoms_gpu.cpp  colvaratoms_gpu.h  colvaratoms_soa.cpp  colvaratoms_soa.h  colvarbias.cpp  colvarbias.h  colvarbias_abf.cpp  colvarbias_abf.h  colvarbias_abmd.cpp  colvarbias_abmd.h  colvarbias_alb.cpp  colvarbias_alb.h  colvarbias_histogram.cpp  colvarbias_histogram.h  colvarbias_histogram_reweight_amd.cpp  colvarbias_histogram_reweight_amd.h  colvarbias_meta.cpp  colvarbias_meta.h  colvarbias_opes.cpp  colvarbias_opes.h  (+81 more)
tests/: Makefile  README.md  abf-customgrid.in  abf.in  abf2d.in  abf2d_euler.in  abf2d_euler_weighted.in  abmd.in  angle.in  build_tests.sh  centers-moving-full.in  centers-moving-half.in  centers-moving-stages.in  coordnum-aniso-pairlist.in  coordnum-aniso.in  coordnum-group2centeronly.in  coordnum-pairlist.in  coordnum.in  customfunction_harmonic-fixed.in  deer.in  dihedral.in  dihedralPC.in  dihedralwalls.in  dipoleangle.in  dipolemagnitude.in  distance-autocorrfunc.in  distance-coeffs.in  distance-corrfunc.in  distance-dihedral_histogram2d-periodic-customgrid.in  distance-dihedral_histogram2d-periodic.in  distance-extended-grid.in  distance-extended.in  distance-grid-expand.in  distance-grid-finer.in  distance-grid.in  distance-runave.in  distance.in  distance2-grid.in  distancedir-fitgroup.in  distancedir.in  (+96 more)
tests/functional/: CMakeLists.txt  run_colvars_test.cpp
tests/functional_gpu/: CMakeLists.txt  run_colvars_test_cuda.cpp
tests/unittests/: CMakeLists.txt  colvartypes_quaternion.cpp  colvartypes_vectors.cpp  colvarvalue_all_types.cpp  colvarvalue_unit3vector.cpp  da-traj.xyz  embedded_tcl.cpp  file_io.cpp  memory_stream.cpp  parse_error.cpp  read_xyz_traj.cpp  test.in  test_error.in
vmd/: Makefile  configure  configure.diff
vmd-plugin/: Makefile
(+1141 files in other folders)
